Style footer as navbar to fix overlap issues with pagination widgets.
Override navbar's min-height property though, to keep footer slim.

--- a/bootstraped/templates/main.css
+++ b/bootstraped/templates/main.css
@@ -16,9 +16,12 @@
 
 
 
+
 footer {
 	background: inherit;
+  min-height: 0px!important;
 }
+
 
 .sidebar {
   padding-left: 20px;
